fixed group description alignament.

--- a/css/frame.css
+++ b/css/frame.css
@@ -186,8 +186,9 @@ div.group-content {
 
 .group-description {
 	margin: 0;
-	padding: 5px 20px 10px;
+	padding: 5px ;
 	color: #555;
+	text-align: left;
 	font-size: 12px;
 }
 
